[gd_scene load_steps=11 format=2]

[ext_resource path="res://example/Television/Television.gd" type="Script" id=1]
[ext_resource path="res://example/Television/material_case.tres" type="Material" id=2]
[ext_resource path="res://example/Television/material_screen_static.tres" type="Material" id=3]
[ext_resource path="res://example/Television/material_screen_normal.tres" type="Material" id=4]
[ext_resource path="res://example/Television/material_screen_off.tres" type="Material" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="CubeMesh" id=2]
material = ExtResource( 2 )
size = Vector3( 0.1, 1, 1 )

[sub_resource type="QuadMesh" id=5]
material = ExtResource( 6 )
size = Vector2( 0.8, 0.8 )

[sub_resource type="QuadMesh" id=3]
material = ExtResource( 3 )
size = Vector2( 0.8, 0.8 )

[sub_resource type="QuadMesh" id=4]
material = ExtResource( 4 )
size = Vector2( 0.8, 0.8 )

[node name="Television" type="StaticBody" groups=["furniture", "nukable"]]
collision_layer = 160
collision_mask = 14
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.45, 0, 0 )
mesh = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.45, 0, 0 )
mesh = SubResource( 2 )

[node name="MeshInstance3" type="MeshInstance" parent="CollisionShape"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.45, 0 )
mesh = SubResource( 2 )

[node name="MeshInstance4" type="MeshInstance" parent="CollisionShape"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, -0.45, 0 )
mesh = SubResource( 2 )

[node name="MeshInstance5" type="MeshInstance" parent="CollisionShape"]
transform = Transform( -4.37114e-08, -1, 0, -4.37114e-08, 1.91069e-15, 1, -1, 4.37114e-08, -4.37114e-08, 0, 0, -0.45 )
mesh = SubResource( 2 )

[node name="BackLight" type="Spatial" parent="."]
visible = false

[node name="OmniLight" type="OmniLight" parent="BackLight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.586419 )
omni_range = 0.5

[node name="SpotLight" type="SpotLight" parent="BackLight"]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0 )
light_cull_mask = 4293918721
shadow_enabled = true
shadow_bias = -0.15
shadow_reverse_cull_face = true
spot_range = 40.0

[node name="ScreenOff" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.476266 )
cast_shadow = 0
mesh = SubResource( 5 )

[node name="ScreenStatic" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.507898 )
visible = false
cast_shadow = 0
mesh = SubResource( 3 )

[node name="ScreenNormal" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.508577 )
visible = false
cast_shadow = 0
mesh = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 10.0
autostart = true

[connection signal="nuke" from="." to="." method="_on_nuke"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
